--- a/g_meet/manifest.json
+++ b/g_meet/manifest.json
@@ -11,9 +11,9 @@
     }
   ],
   "icons": {
-    "16": "icon-16x16.png",
-    "48": "icon-48x48.png",
-    "128": "icon-128x128.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "web_accessible_resources": [
     {
