--- a/focus_tube/manifest.json
+++ b/focus_tube/manifest.json
@@ -7,7 +7,8 @@
     {
       "matches": ["*://*.youtube.com/*"],
       "js": ["inject.js"],
-      "css": ["inject.css"]
+      "css": ["inject.css"],
+      "run_at": "document_start"
     }
   ]
 }
